# vectorflow

./: .gitignore  MANIFEST.in  README.md  docker-compose.yml  requirements.txt  setup-client.py  setup.py  setup.sh  vectorflow.py
.github/: CODEOWNERS
.github/workflows/: run_unittests.yml  unittests.yml
client/: README.md  embeddings_metadata_client.py  pyproject.toml  vector_db_metadata_client.py  vectorflow.py
client/src/vectorflow_client/: chunk_enhancer.py  chunk_strategy_client.py  embeddings.py  embeddings_metadata_client.py  embeddings_type_client.py  job.py  response.py  vector_db.py  vector_db_metadata_client.py  vector_db_type.py  vector_db_type_client.py  vectorflow.py
clients/: get_jobs_by_ids.py  standard_upload_client.py  streaming_upload_client.py  webhook_hugging_face_testing_client.py  webhook_test_api.py
kube/: api-deployment.yaml  api-service.yaml  config-map.yaml  db-init.yaml  extractor-deployment.yaml  hugging_face_deployment.yaml  minio-deployment.yaml  minio-init.yaml  minio-pvc.yaml  minio-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  qdrant-deployment.yaml  qdrant-init.yaml  qdrant-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  vdb-upload-worker-deployment.yaml  vectorflow-namespace.yaml  worker-deployment.yaml
kube/scripts/: deploy-local-k8s.sh
src/: .dockerignore  TODOs.txt  search_client.py  testing_client.py
src/api/: .dockerignore  Dockerfile  app.py  auth.py  batch.py  batch_status.py  embeddings_metadata.py  embeddings_type.py  job.py  job_status.py  pipeline.py  (+5 more)
testing-clients/: hugging_face_upload_client.py  standard_upload_client.py  streaming_upload_client.py  test_vectorflow_client.py  webhook_hugging_face_testing_client.py  webhook_test_api.py
tests/: generate_testing_data.py  test_app.py  test_worker.py  test_worker_performance.py
(+56 files in other folders)
